[package]
name = "cursive_ssh"
version = "0.1.0"
edition = "2024"
description = "Painlessly expose Rust TUI applications over ssh"
license = "MIT"
repository = "https://github.com/pignated/cursive_ssh"
keywords = ["cursive", "tui", "ssh", "terminal"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
russh = { version = "0.35.0-beta.9", features = ["vendored-openssl"] }
russh-keys = { version = "0.23.0-beta.1" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.68"
lazy_static = "1.4.0"
async-std = "1.12.0"
openpty = "0.2.0"
libc = "0.2.139"
async-trait = "0.1.63"
log = "0.4.17"

[[example]]
name = "dialog"

[dependencies.cursive]
version = "0.21.1"
default-features = false
features=["termion-backend"]

[features]
cursive-markdown = ["cursive/markdown"]
